<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_list_view"
        android:icon="@drawable/ic_dashboard"
        app:showAsAction="ifRoom"
        android:title="List View"/>
    <item
        android:id="@+id/action_setting"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_transfer"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/transfer"
        android:title="@string/Stock_Transfer"/>
    <item
        android:id="@+id/action_logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/logout"
        android:title="@string/logout"/>

    <item
        android:id="@+id/action_info"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/info"
        android:title="@string/Info"/>

    <item
        android:id="@+id/action_language"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/language"
        android:title="@string/change_lang"/>

</menu>
