<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="commercial.builtio.module.AddDeliveryActivity">

    <include layout="@layout/actionbar_toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_transaction_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_transaction_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:inputType="text"
                        android:hint="@string/transaction_code" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_delivery_man"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_delivery_man"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:inputType="textCapWords"
                        android:hint="@string/delivery_man" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btnSelectCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_customer"/>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_chalan_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_chalan_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:inputType="text"
                        android:hint="@string/chalan_no" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btnDeliveryMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_mode"/>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_rate_bpcl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_rate_bpcl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:inputType="text"
                        android:hint="@string/rate_bpcl" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:focusable="false"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:inputType="text"
                        android:hint="@string/discount" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_rate_for_party"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_rate_for_party"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:focusable="false"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:inputType="text"
                        android:hint="@string/rate_for_party" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_full_cylinder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_full_cylinder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:inputType="text"
                        android:hint="@string/full" />

                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_total_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_total_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:inputType="number"
                        android:hint="@string/total_amount" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_empty_clndr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_total_empty_clndr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:inputType="number"
                        android:hint="@string/empty_clndr" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_credit_clndr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_credit_clndr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:inputType="number"
                        android:hint="@string/credit_clndr" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_amnt_of_credit_cylinr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_amnt_of_credit_cylinr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:inputType="number"
                        android:hint="@string/amnt_of_credit_cylinr" />

                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_total_credit_clndr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_total_credit_clndr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:inputType="number"
                        android:hint="@string/total_credit_clndr" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_total_credit_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_total_credit_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:inputType="number"
                        android:hint="@string/total_credit_amount" />

                </android.support.design.widget.TextInputLayout>



                <Button
                    android:id="@+id/btnCylnrType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cyldr_type"/>



                <Button
                    android:id="@+id/btnPaymentMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_mode"/>



                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_alignParentBottom="true"
                    android:text="@string/btn_submit"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</LinearLayout>
